# draft_hub

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  app.py  dev-requirements.txt  docker-compose.yaml  pyproject.toml  requirements.txt
app/: __init__.py  app.py  config.py  database.py  main.py  models.py  security.py  settings.py
app/database/: __init__.py  models.py
app/database/models/: __init__.py  amendments.py  documents.py  group_memberships.py  groups.py  patches.py  projects.py  tenants.py  users.py
app/database/models/helpers/: __init__.py
app/helpers/: __init__.py
app/middleware/: configure.py
app/routers/: __init__.py  amendments.py  auth.py  documents.py  general.py  projects.py  tenants.py  users.py
app/routers/helpers/: __init__..py  diff.py
migrations/: README.md  env.py
templates/: amendment_form.html  base.html  doc_detail.html  doc_form.html  index.html  login.html  project_detail.html  project_form.html  register.html  tenant_detail.html  tenant_form.html
ui/: index.html  package.json
ui/src/: App.jsx
ui/src/components/: DiffViewer.jsx  DocumentUpload.jsx  VotePanel.jsx
